--- a/PMS-PropertyHapa.Staff/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Shared/_Layout.cshtml
@@ -266,6 +266,9 @@
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-book"><path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path><path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path></svg><span>Accounting</span>
                                     </a>
                                     <ul class="sidebar-submenu">
+                                        <li><a href="@Url.Action("Index","AccountType")">Account Type</a></li>
+                                        <li><a href="@Url.Action("Index","AccountSubType")">Account Sub Type</a></li>
+                                        <li><a href="@Url.Action("Index","ChartAccounts")">Chart of Accounts</a></li>
                                         <li><a href="@Url.Action("Rent","Accounting")">View Rent</a></li>
                                         <li><a href="@Url.Action("AssestExpense","Accounting")">View Assest Expense</a></li>
                                         <li><a href="@Url.Action("Deposit","Accounting")">View Deposit</a></li>
@@ -501,7 +504,8 @@
 
             }
             $('.select2').select2({
-                allowClear: true
+                allowClear: true,
+                placeholder: "Please select an option"
             });
             $('.datepickerSingle').datepicker({
                 orientation: "bottom left",
