--- a/PMS-PropertyHapa.Staff/Views/Task/ViewTask.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Task/ViewTask.cshtml
@@ -320,6 +320,7 @@
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                     <button type="submit" class="btn btn-primary" id="saveBtn">Save</button>
                 </div>
+                </div>
             </form>
 
         </div>
